@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.30
+ * @version 0.13.31
  * Breaks */
 @lower-break: 480px;
 @upper-break: 680px;
@@ -11,6 +11,7 @@
 @button-border: gainsboro;
 @exception-bg: lightpink;
 @line-border: gray;
+@line-border-light: hsl(from @line-border h s l / 0.5);
 @message-border: firebrick;
 @modal-header-border: darkorange;
 @nav-selected: seagreen;
@@ -338,6 +339,14 @@ footer {
             }
             &.mobile {
                 font-size: medium; text-align: left;
+                .nav-panel {
+                    background: var(--bg-light); border: 1px solid @line-border;
+                    border-radius: 5px;
+                    position: absolute; transform: translate(100%, -2.25rem);
+                    &.hide {
+                        display: none;
+                    }
+                }
             }
         }
         li.control a, li.context a, li.mobile a, .form-button span {
@@ -384,7 +393,7 @@ footer {
             border-radius: 5px; direction: rtl; display: inline-block;
             left: -0.5rem;
             max-height: (100vh - 15%); max-height: (100dvh - 15%);
-            overflow: auto; position: absolute; z-index: 6;
+            position: absolute; z-index: 6;
         }
         .hamburger[type=checkbox], .mobile-panel {
             display: none;
@@ -404,7 +413,7 @@ footer {
             &.mobile {
                 width: 100%;
                 .drop-menu {
-                    color: @text-watermark; padding-left: 0.5rem;
+                    color: @text-link; display: block; padding: 0.5rem;
                 }
             }
             &.selected {
@@ -434,11 +443,11 @@ footer {
     align-items: center; display: flex; justify-content: left;
     &::before {
         background: var(--bg-base);
-        border-left: 1px solid hsl(from @line-border h s l / 0.5);
+        border-left: 1px solid @line-border-light;
         border-top-left-radius: 20px; content: ''; display: inline-block;
         height: @nav-header-height; width: @nav-width-both;
         @media (max-width: @lower-break) {
-            border-bottom: 1px solid hsl(from @line-border h s l / 0.5);
+            border-bottom: 1px solid @line-border-light;
             width: 3.5rem !important;
         }
     }
@@ -510,21 +519,16 @@ footer {
             transform: translate(0, 0.2rem); width: 1rem;
         }
     }
- }
-.foo {
-    background: linear-gradient(
-        to right, @line-border 1px, transparent 1px, transparent
-    );
-    background-position-x: 100%;
-    background-repeat: no-repeat;
-    background-size: 50% 100%;
 }
 .sidebar {
     &::after {
         background:
-            linear-gradient(to bottom, var(--bg-base), transparent);
-        border-left: 1px dashed hsl(from @line-border h s l / 0.5);
-        border-right: 1px dashed hsl(from @line-border h s l / 0.5);
+            linear-gradient(to bottom, @line-border-light, transparent),
+            linear-gradient(to bottom, var(--bg-base), transparent),
+            linear-gradient(to bottom, @line-border-light, transparent);
+        background-position-x: left, center, right;
+        background-repeat: no-repeat;
+        background-size: 1px 100%, calc(100% - 2px) 100%, 1px 100%;
         content: ''; display: block; height: 5rem;
         @media (max-width: @lower-break) {
             display: none;
@@ -593,8 +597,8 @@ footer {
         }
     }
     .nav-menu {
-        border-left: 1px solid hsl(from @line-border h s l / 0.5);
-        border-right: 1px solid hsl(from @line-border h s l / 0.5);
+        border-left: 1px solid @line-border-light;
+        border-right: 1px solid @line-border-light;
     }
 }
 .contact-page {
@@ -605,6 +609,9 @@ footer {
 }
 .documentation {
     counter-reset: subheader; font-family: #fonts[sans];
+    a {
+        color: @text-link;
+    }
     h1 {
         font-size: 1.25rem;
     }
